# Baahubali

./: .gitignore  ARMYPR6.urdf  README.md  armvone.m  armvone.prj  controllerTest.py  data.rrd  receive.c  receive.py  receive2.py  requirements.txt  roll.STL  test.m  text.m
archive/: rcd3.py
archive/codegen/dll/armvone/: CharacterVector.c  DampedBFGSwGradientProjection.c  SystemCore.h  armvone.c  armvone.def  armvone_data.c  armvone_emxutil.h  buildInfo.mat  compileInfo.mat  diag.h  gcGuiReport.mat  inv.c  isPositiveDefinite.h  main  mldivide.c  mtimes.c  rand.h  rigidBodyJoint.c  rtGetInf.h  strcmp.h  structConstructorHelper.c  tic.h  toc.h  trvec2tform.c  validatestring.c  xgeqp3.c  xrotg.c
archive/codegen/dll/armvone/interface/: _coder_armvone_api.h  _coder_armvone_info.c
archive/codegen/mex/armvone/: IKHelpers.c  RigidBodyTree.c  armvone.h  armvone_data.h  armvone_initialize.c  armvone_mexutil.c  armvone_terminate.c  armvone_types.h  buildInfo.mat  cat.h  complexTimes.c  div.h  eml_int_forloop_overflow_check.h  eye.c  find.c  importrobot.c  importrobot.h  indexShapeCheck.c  inverseKinematics.c  inverseKinematics.h  rigidBodyJoint.h  rt_nonfinite.c  structConstructorHelper.h  vAllOrAny.h  warning.c  warning.h  xorgqr.c  xscal.h  xswap.c  xzlangeM.c  xzlascl.c
archive/codegen/mex/armvone/interface/: _coder_armvone_api.c  _coder_armvone_info.c
archive/codegen2.0/dll/armvone/: CoderTimeAPI.h  CollisionSet.h  IKHelpers.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  eml_rand_mt19937ar.c  find.h  gcGuiReport.mat  handle.c  main  rtGetInf.c  xzlascl.h  xzsvdc.h
archive/codegen2.0/dll/armvone/examples/: main.c
archive/codegen2.0/dll/armvone/export/: armvone.cmake
archive/meshes/: link1.STL
codegen/: ARMDIFF1.csv  pitch.STL
codegen/dll/armvone/: CMakeLists.txt  CharacterVector.c  CharacterVector.h  CoderTimeAPI.c  CoderTimeAPI.h  CollisionSet.c  CollisionSet.h  DampedBFGSwGradientProjection.c  DampedBFGSwGradientProjection.h  IKHelpers.c  IKHelpers.h  RigidBody.c  RigidBody.h  RigidBodyTree.c  RigidBodyTree.h  SystemCore.c  SystemCore.h  any.c  any.h  armvone.c  armvone.def  armvone.h  armvone.sh  armvone_data.c  armvone_data.h  armvone_emxAPI.c  armvone_emxAPI.h  armvone_emxutil.c  armvone_emxutil.h  armvone_initialize.c  armvone_initialize.h  armvone_internal_types.h  armvone_terminate.c  armvone_terminate.h  armvone_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  diag.c  (+81 more)
codegen/dll/armvone/examples/: main.c  main.h
codegen/dll/armvone/export/: armvoneTargets-release.cmake
codegen/dll/armvone/html/: report.mldatx
codegen/dll/armvone/interface/: _coder_armvone_api.c  _coder_armvone_api.h  _coder_armvone_info.c  _coder_armvone_info.h  _coder_armvone_mex.c  _coder_armvone_mex.h
codegen/mex/armvone/: CharacterVector.c  CollisionSet.c  DampedBFGSwGradientProjection.c  DampedBFGSwGradientProjection.h  IKHelpers.c  RigidBody.c  RigidBody.h  RigidBodyTree.c  RigidBodyTree.h  SystemCore.c  SystemCore.h  all.c  any.c  any.h  armvone.c  armvone.h  armvone.map  armvone_data.c  armvone_data.h  armvone_emxutil.c  armvone_emxutil.h  armvone_initialize.c  armvone_initialize.h  armvone_internal_types.h  armvone_mex.mexa64  armvone_mex.sh  armvone_types.h  assertCompatibleDims.c  build.ninja  buildInfo.mat  cat.c  cfiGuiReport.mat  compile_commands.json  complexTimes.h  diag.c  div.c  eml_int_forloop_overflow_check.c  eml_mtimes_helper.c  eml_mtimes_helper.h  eml_qr.c  (+51 more)
codegen/mex/armvone/html/: report.mldatx
codegen/mex/armvone/interface/: _coder_armvone_api.c  _coder_armvone_api.h  _coder_armvone_info.c  _coder_armvone_info.h  _coder_armvone_mex.c  _coder_armvone_mex.h
imu_module/: main.py
matlab/: ARMYPR6.csv  vtwo.m
meshes/: base_link.STL  turntable.STL
src/: armvone.m  armvone.prj  controller.m  receive2.py  rerun_ARMDIFF.urdf  rerunvisualization.py  test.m
src/codegen/dll/armvone/: RigidBodyTree.h  SystemCore.c  armvone.c  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  eml_rand_mt19937ar_stateful.h  inv.h  rtwtypes.h  sqrt.c  svd.c  xaxpy.c  xdotc.c  xnrm2.h  xrotg.h  xzlascl.c
src/codegen/dll/armvone/html/: report.mldatx
src/codegen/dll/armvone/interface/: _coder_armvone_info.c
src/codegen/mex/armvone/: CollisionSet.h  DampedBFGSwGradientProjection.c  IKHelpers.c  RigidBody.c  RigidBody.h  all.c  armvone.c  armvone.map  armvone_data.h  armvone_emxutil.c  armvone_initialize.c  armvone_internal_types.h  armvone_mex.mexa64  armvone_mexutil.h  armvone_terminate.h  armvone_types.h  assertCompatibleDims.h  build.ninja  buildInfo.mat  compile_commands.json  diag.c  eml_qr.h  eye.h  indexShapeCheck.c  indexShapeCheck.h  inverseKinematics.c  mldivide.c  norm.c  randn.c  sqrt.h  sqrt1.h  strcmp.c  sumMatrixIncludeNaN.c  toc.c  validatestring.h  xdotc.c  xdotc.h  xgeqp3.c  xgeqp3.h  xnrm2.c
src/codegen/mex/armvone/html/: report.mldatx
src/codegen/mex/armvone/interface/: _coder_armvone_info.c
src/codegenArchive/codegen1.0/codegen/dll/armvone/: CMakeLists.txt  CoderTimeAPI.c  RigidBody.h  RigidBodyTree.c  any.c  any.h  armvone.sh  armvone_emxutil.h  armvone_terminate.c  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  main  minOrMax.c  mldivide.h  norm.h  randn.h  rigidBodyJoint.h  rtw_proj.tmw  structConstructorHelper.c  tic.c  trvec2tform.h  xrot.h  xswap.h  xzsvdc.c
src/codegenArchive/codegen1.0/codegen/dll/armvone/examples/: main.c
src/codegenArchive/codegen1.0/codegen/dll/armvone/html/: report.mldatx
src/codegenArchive/codegen1.0/codegen/dll/armvone/interface/: _coder_armvone_info.h
src/codegenArchive/codegen2.0/dll/armvone/: RigidBody.c  armvone.def  armvone_internal_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  eml_rand_mt19937ar_stateful.c  find.c  gcGuiReport.mat  inverseKinematics.h  mtimes.h  (+3 more)
src/meshes/: linkOne.STL  roll.STL
urdf/: ARMDIFF1.urdf  armvone.m  armvone.prj  rerun_ARMDIFF.urdf  test.m
urdf/.ipynb_checkpoints/: ARMDIFF1-checkpoint.urdf  rerun_ARMDIFF-checkpoint.urdf
urdf/meshes/: base_link.STL  linkTwo.STL  turntable.STL
(+371 files in other folders)
